--- a/pages/style.css
+++ b/pages/style.css
@@ -1,6 +1,10 @@
 body {
-    min-height: 75rem;
-    /* Can be removed; just added for demo purposes */
+   /* Margin bottom by footer height */
+   margin-bottom: 125px;
+}
+html {
+    position: relative;
+    min-height: 100%;
 }
 
 .navbar {
@@ -43,6 +47,10 @@ body {
     padding-top: 3rem;
     padding-bottom: 3rem;
     background-color: #f7f7f7;
+
+}
+.profile{
+
 }
 
 .card {
@@ -60,12 +68,13 @@ body {
 .card-text {
     font-size: 85%;
 }
-
 footer {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 125px;
+    background-color: whitesmoke;
 }
-
 footer p {
-    margin-bottom: .25rem;
+    margin-top:50px;
 }
